--- a/requestpermission/build.gradle
+++ b/requestpermission/build.gradle
@@ -3,12 +3,11 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
-
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 24
+        minSdkVersion 17
+        targetSdkVersion 25
         versionCode 2
         versionName "1.0.1"
 
@@ -19,15 +18,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
 }
 
 
-version = "1.0.1"
+version = "1.1"
 group = "com.wpf.requestpermission"
 def siteUrl = 'https://github.com/wazsj/RequestPermissionDemo'
 def gitUrl = 'https://github.com/wazsj/RequestPermissionDemo.git'
@@ -70,6 +71,8 @@ task sourcesJar(type: Jar) {
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//    classpath += project.files(configurations.compile.files,android.getBootClasspath().join(File.pathSeparator))
+    options.encoding = "utf-8"
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
