--- a/requestpermission/build.gradle
+++ b/requestpermission/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'com.jfrog.bintray'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.2"
     defaultConfig {
-        minSdkVersion 17
+        minSdkVersion 9
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.1.1"
+        versionCode 20170313
+        versionName "1.2"
 
     }
     buildTypes {
@@ -24,11 +24,11 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
 }
 
 
-version = "1.1.1"
+version = "1.2"
 group = "com.wpf.requestpermission"
 def siteUrl = 'https://github.com/wazsj/RequestPermissionDemo'
 def gitUrl = 'https://github.com/wazsj/RequestPermissionDemo.git'
